[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/ArcadeGameUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ChangeScene/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ChangeScene/UpgradesGGs.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/spaceship.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Enemies/enemySpawner.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Powerup/PowerUpSpawner.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0, 0.27451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
layer = 4

[node name="UpgradesGGs" parent="." instance=ExtResource( 3 )]
layer = 3

[node name="ScoreCounter" parent="." instance=ExtResource( 1 )]
layer = 2

[node name="GameWorld" type="CanvasLayer" parent="."]

[node name="Spaceship" parent="GameWorld" instance=ExtResource( 5 )]
position = Vector2( 518.99, 501.009 )

[node name="enemySpawner" type="Control" parent="GameWorld"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shooterTimer" type="Timer" parent="GameWorld/enemySpawner"]
wait_time = 1.5
one_shot = true

[node name="normalTimer" type="Timer" parent="GameWorld/enemySpawner"]
one_shot = true

[node name="kamikazeTimer" type="Timer" parent="GameWorld/enemySpawner"]
wait_time = 2.0
one_shot = true

[node name="PowerUpSpawner" type="Control" parent="GameWorld"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeTimer" type="Timer" parent="GameWorld/PowerUpSpawner"]
wait_time = 15.0
one_shot = true

[node name="AddScoreTimer" type="Timer" parent="GameWorld/PowerUpSpawner"]
wait_time = 30.0
one_shot = true

[node name="x2ScoreTimer" type="Timer" parent="GameWorld/PowerUpSpawner"]
wait_time = 60.0
one_shot = true

[node name="CoinTimer" type="Timer" parent="GameWorld/PowerUpSpawner"]
one_shot = true

[node name="PauseTimer" type="Timer" parent="GameWorld"]
wait_time = 1.5
one_shot = true
autostart = true
[connection signal="defeat" from="GameWorld/Spaceship" to="GameWorld/enemySpawner" method="_on_Spaceship_defeat"]
[connection signal="level_passed" from="GameWorld/Spaceship" to="GameWorld/PowerUpSpawner" method="_on_Spaceship_level_passed"]
[connection signal="level_passed" from="GameWorld/Spaceship" to="GameWorld/enemySpawner" method="_on_Spaceship_level_passed"]
